<resources>
    <string name="app_name">Drop Ton Casque</string>
    <string name="user_name">Votre profil</string>
    <string name="welcome_msg">Drop Ton Casque</string>
    <string name="com">Commercant</string>
    <string name="part">Particulier</string>
    <string name="iden">S\'identifier</string>
    <string name="toggle_button">Placeholder toggle button</string>
    <string name="logo_description">Casque laché</string>
    <string name="menu">Menu</string>
    <string name="title_activity_maps">Map</string>
    <string name="login">S\'identifier</string>
    <string name="mail">Email</string>
    <string name="pw">Mot de passe</string>
    <string name="welCom">Bienvenue Commercant !\n Vous pouvez rajouter votre commerce.</string>
    <string name="nameShop">Nom du commerce</string>
    <string name="typeShop">Type d\'établissement</string>
    <string name="adressShop">Adresse de votre commerce</string>
    <string name="addShop">Demande d\'ajout</string>
    <string name="popTitle">This is a popup window.</string>
    <string name="type">Type</string>
    <string name="content">Content</string>
    <string name="email">Email</string>
    <string name="tel">Telephone</string>
    <string name="url">URL du site</string>
    <string name="inscription">S\'inscrire</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prenom</string>
    <string name="confirm_pw">Confirmez le mot de passe</string>
    <string name="je_suis">Je suis</string>
    <string name="vos_favoris">Vos favoris :</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_inscription">InscriptionActivity</string>
    <string name="title_activity_com">ComActivity</string>
    <string name="title_activity_particulier">ParticulierActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="horaire">Horaires</string>
    <string name="user_page">Voici votre page d\'accueil ! D\'ici, vous pouvez accéder à la carte, à votre liste de favoris ou aux paramètres</string>
    <string name="addFav">Ajouter à mes favoris</string>
    <string name="Send">Réserver une place</string>
    <string name="action_logout">Déconnexion</string>
    <string name="menu_user">Votre profil</string>
    <string name="menu_home">Accueil</string>
    <string name="menu_login">Connexion</string>
    <string name="menu_register">S\'inscrire</string>
    <string name="menu_map">Carte</string>
    <string name="menu_com">Votre commerce</string>
    <string name="liberation">Libérez-vous, déposez vos affaires et profitez</string>

</resources>