<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_menu_login"
            android:title="@string/menu_login" />
        <item
            android:id="@+id/nav_register"
            android:icon="@drawable/ic_menu_register"
            android:title="@string/menu_register" />
        <item
            android:id="@+id/nav_user"
            android:icon="@drawable/ic_menu_user"
            android:title="@string/menu_user" />
        <item
            android:id="@+id/nav_com"
            android:icon="@drawable/ic_menu_com"
            android:title="@string/menu_com" />
    </group>
</menu>