<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">



    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.droptoncasque.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_login"
        android:name="com.example.droptoncasque.ui.login.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/nav_register"
        android:name="com.example.droptoncasque.ui.register.RegisterFragment"
        android:label="@string/menu_register"
        tools:layout="@layout/fragment_register" />

    <fragment
        android:id="@+id/nav_map"
        android:name="com.example.droptoncasque.MapsActivity"
        android:label="@string/menu_map"
        tools:layout="@layout/activity_maps" />
</navigation>