<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="361dp"
        android:layout_height="403dp"
        android:background="@color/white"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="42dp">

        <TextView
            android:id="@+id/com_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="65dp"
            android:layout_marginEnd="62dp"
            android:layout_marginBottom="332dp"
            android:text="@string/popTitle"
            android:textAlignment="center"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/com_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="63dp"
            android:layout_marginEnd="64dp"
            android:layout_marginBottom="289dp"
            android:text="@string/type"
            android:textAlignment="center"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/com_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="63dp"
            android:layout_marginEnd="64dp"
            android:layout_marginBottom="230dp"
            android:text="@string/content"
            android:textAlignment="center"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/com_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="65dp"
            android:layout_marginEnd="62dp"
            android:layout_marginBottom="157dp"
            android:text="@string/email"
            android:textAlignment="center"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/com_telephone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="63dp"
            android:layout_marginEnd="64dp"
            android:layout_marginBottom="102dp"
            android:text="@string/tel"
            android:textAlignment="center"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/com_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="63dp"
            android:layout_marginEnd="64dp"
            android:layout_marginBottom="54dp"
            android:text="@string/url"
            android:textAlignment="center"
            android:textSize="22sp" />

        <!--        <Button-->
<!--            android:id="@+id/map_button_menu"-->
<!--            android:layout_width="100dp"-->
<!--            android:layout_height="50dp"-->
<!--            android:layout_alignParentBottom="true"-->
<!--            android:layout_marginBottom="353dp"-->
<!--            android:background="@color/red_bdx"-->
<!--            android:text="@string/menu" />-->

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>